refactor: move app to public/ structure and deploy Pages from public

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Neue Veranstaltung anlegen – MVW Kassierer">
   <title>Neue Veranstaltung – MVW Kassierer</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="full-page">
 
@@ -82,9 +82,9 @@
     </button>
   </main>
 
-  <script src="models.js"></script>
-  <script src="storage.js"></script>
-  <script src="ui.js"></script>
-  <script src="create-app.js"></script>
+  <script src="/shared/js/models.js"></script>
+  <script src="/shared/js/storage.js"></script>
+  <script src="/shared/js/ui.js"></script>
+  <script src="/create/js/create-app.js"></script>
 </body>
 </html>
