--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Vereins-Kassierer App – Browser-basierte Kasse für Vereinsfeste">
   <title>MVW Kassierer</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <script>
     (function () {
       if (sessionStorage.getItem('vt-direction') === 'back') {
@@ -64,10 +64,10 @@
     </div>
   </footer>
 
-  <script src="models.js"></script>
-  <script src="storage.js"></script>
-  <script src="ui.js"></script>
-  <script src="app.js"></script>
+  <script src="/shared/js/models.js"></script>
+  <script src="/shared/js/storage.js"></script>
+  <script src="/shared/js/ui.js"></script>
+  <script src="/js/app.js"></script>
 </body>
 </html>
 
