--- a/public/settings/index.html
+++ b/public/settings/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Einstellungen – MVW Kassierer">
   <title>Einstellungen – MVW Kassierer</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <script>
     (function () {
       if (sessionStorage.getItem('vt-direction') === 'back') {
@@ -53,9 +53,9 @@
 
   </main>
 
-  <script src="models.js"></script>
-  <script src="storage.js"></script>
-  <script src="ui.js"></script>
-  <script src="settings-app.js"></script>
+  <script src="/shared/js/models.js"></script>
+  <script src="/shared/js/storage.js"></script>
+  <script src="/shared/js/ui.js"></script>
+  <script src="/settings/js/settings-app.js"></script>
 </body>
 </html>
