--- a/public/stats/index.html
+++ b/public/stats/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Statistik – MVW Kassierer">
   <title>Statistik – MVW Kassierer</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="full-page">
 
@@ -18,7 +18,7 @@
 
   <div id="stats-error" class="error-page" hidden>
     <p>Veranstaltung nicht gefunden.</p>
-    <a href="settings.html" class="btn btn-secondary">← Zurück zu Einstellungen</a>
+    <a href="/settings/" class="btn btn-secondary">← Zurück zu Einstellungen</a>
   </div>
 
   <main id="stats-content" class="stats-main" hidden>
@@ -46,9 +46,9 @@
 
   </main>
 
-  <script src="models.js"></script>
-  <script src="storage.js"></script>
-  <script src="ui.js"></script>
-  <script src="stats-app.js"></script>
+  <script src="/shared/js/models.js"></script>
+  <script src="/shared/js/storage.js"></script>
+  <script src="/shared/js/ui.js"></script>
+  <script src="/stats/js/stats-app.js"></script>
 </body>
 </html>
