tune: reduce tap debounce and add simple time-based stats charts

--- a/public/stats/index.html
+++ b/public/stats/index.html
@@ -40,8 +40,13 @@
     </section>
 
     <section class="stats-section">
-      <h2 class="section-title">Transaktionen</h2>
-      <div class="chart-container" id="stats-chart"></div>
+      <h2 class="section-title">Transaktionen über Zeit</h2>
+      <div class="chart-container" id="stats-chart-count"></div>
+    </section>
+
+    <section class="stats-section">
+      <h2 class="section-title">Umsatz über Zeit</h2>
+      <div class="chart-container" id="stats-chart-amount"></div>
     </section>
 
   </main>
