fix: redirect to app root via Paths.page('') after event creation

--- a/public/stats/index.html
+++ b/public/stats/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Statistik – MVW Kassierer">
-  <title>Statistik – MVW Kassierer</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <meta name="description" content="Statistik - MVW Kassierer">
+  <base href="/">
+  <title>Statistik - MVW Kassierer</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="full-page">
 
@@ -18,7 +19,7 @@
 
   <div id="stats-error" class="error-page" hidden>
     <p>Veranstaltung nicht gefunden.</p>
-    <a href="/settings/" class="btn btn-secondary">← Zurück zu Einstellungen</a>
+    <a href="settings/" class="btn btn-secondary">← Zurück zu Einstellungen</a>
   </div>
 
   <main id="stats-content" class="stats-main" hidden>
@@ -51,9 +52,10 @@
 
   </main>
 
-  <script src="/shared/js/models.js"></script>
-  <script src="/shared/js/storage.js"></script>
-  <script src="/shared/js/ui.js"></script>
-  <script src="/stats/js/stats-app.js"></script>
+  <script src="shared/js/models.js"></script>
+  <script src="shared/js/storage.js"></script>
+  <script src="shared/js/ui.js"></script>
+  <script src="shared/js/paths.js"></script>
+  <script src="stats/js/stats-app.js"></script>
 </body>
 </html>
