--- a/public/create/index.html
+++ b/public/create/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Neue Veranstaltung anlegen – MVW Kassierer">
-  <title>Neue Veranstaltung – MVW Kassierer</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <meta name="description" content="Neue Veranstaltung anlegen - MVW Kassierer">
+  <base href="/">
+  <title>Neue Veranstaltung - MVW Kassierer</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="full-page">
 
@@ -82,9 +83,10 @@
     </button>
   </main>
 
-  <script src="/shared/js/models.js"></script>
-  <script src="/shared/js/storage.js"></script>
-  <script src="/shared/js/ui.js"></script>
-  <script src="/create/js/create-app.js"></script>
+  <script src="shared/js/models.js"></script>
+  <script src="shared/js/storage.js"></script>
+  <script src="shared/js/ui.js"></script>
+  <script src="shared/js/paths.js"></script>
+  <script src="create/js/create-app.js"></script>
 </body>
 </html>
