--- a/public/edit/index.html
+++ b/public/edit/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Artikel bearbeiten – MVW Kassierer">
-  <title>Artikel bearbeiten – MVW Kassierer</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <meta name="description" content="Artikel bearbeiten - MVW Kassierer">
+  <base href="/">
+  <title>Artikel bearbeiten - MVW Kassierer</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="full-page">
 
@@ -18,7 +19,7 @@
 
   <div id="edit-error" class="error-page" hidden>
     <p>Veranstaltung nicht gefunden.</p>
-    <a href="/settings/" class="btn btn-secondary">← Zurück zu Einstellungen</a>
+    <a href="settings/" class="btn btn-secondary">← Zurück zu Einstellungen</a>
   </div>
 
   <main id="edit-content" class="setup-main" hidden>
@@ -59,9 +60,10 @@
 
   </main>
 
-  <script src="/shared/js/models.js"></script>
-  <script src="/shared/js/storage.js"></script>
-  <script src="/shared/js/ui.js"></script>
-  <script src="/edit/js/edit-app.js"></script>
+  <script src="shared/js/models.js"></script>
+  <script src="shared/js/storage.js"></script>
+  <script src="shared/js/ui.js"></script>
+  <script src="shared/js/paths.js"></script>
+  <script src="edit/js/edit-app.js"></script>
 </body>
 </html>
