--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Vereins-Kassierer App – Browser-basierte Kasse für Vereinsfeste">
+  <meta name="description" content="Vereins-Kassierer App - Browser-basierte Kasse für Vereinsfeste">
+  <base href="/">
   <title>MVW Kassierer</title>
-  <link rel="stylesheet" href="/css/style.css">
   <script>
     (function () {
       if (sessionStorage.getItem('vt-direction') === 'back') {
@@ -14,6 +14,7 @@
       }
     }());
   </script>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="full-page">
 
@@ -64,10 +65,11 @@
     </div>
   </footer>
 
-  <script src="/shared/js/models.js"></script>
-  <script src="/shared/js/storage.js"></script>
-  <script src="/shared/js/ui.js"></script>
-  <script src="/js/app.js"></script>
+  <script src="shared/js/models.js"></script>
+  <script src="shared/js/storage.js"></script>
+  <script src="shared/js/ui.js"></script>
+  <script src="shared/js/paths.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
 
