--- a/public/settings/index.html
+++ b/public/settings/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Einstellungen – MVW Kassierer">
-  <title>Einstellungen – MVW Kassierer</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <meta name="description" content="Einstellungen - MVW Kassierer">
+  <base href="/">
+  <title>Einstellungen - MVW Kassierer</title>
   <script>
     (function () {
       if (sessionStorage.getItem('vt-direction') === 'back') {
@@ -14,6 +14,7 @@
       }
     }());
   </script>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="full-page">
 
@@ -53,9 +54,10 @@
 
   </main>
 
-  <script src="/shared/js/models.js"></script>
-  <script src="/shared/js/storage.js"></script>
-  <script src="/shared/js/ui.js"></script>
-  <script src="/settings/js/settings-app.js"></script>
+  <script src="shared/js/models.js"></script>
+  <script src="shared/js/storage.js"></script>
+  <script src="shared/js/ui.js"></script>
+  <script src="shared/js/paths.js"></script>
+  <script src="settings/js/settings-app.js"></script>
 </body>
 </html>
